--- a/seeking_restaurants_provider/src/main/resources/application.properties
+++ b/seeking_restaurants_provider/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+server.port=80
