--- a/seeking_restaurants_provider/Dockerfile
+++ b/seeking_restaurants_provider/Dockerfile
@@ -1,4 +1,5 @@
-FROM openjdk:21
-WORKDIR /app
-COPY target/*.jar app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+FROM openjdk:20
+WORKDIR application
+COPY seeking_restaurants_provider.main.jar ./
+ENTRYPOINT ["java","-jar","seeking_restaurants_provider.main.jar"]
+
