--- a/seeking_restaurants_provider/src/main/resources/application.properties
+++ b/seeking_restaurants_provider/src/main/resources/application.properties
@@ -1,9 +1,23 @@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/seeking_restaurants
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.open-in-view=false
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#server.port=80
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/seeking_restaurants
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.show_sql=true
+spring.h2.console.enabled=true
+spring.jpa.database=h2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.h2.console.path=/h2-console
 server.port=80
